--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,12 +53,12 @@ jobs:
       - uses: julia-actions/setup-julia@v1
         with:
           version: '1'
-    #  - run: |
-    #      julia --project=docs -e '
-    #        using Pkg
-    #        Pkg.develop(PackageSpec(path=pwd()))
-    #        Pkg.instantiate()'
-      - run: |
+      #- run: |
+          julia --project=docs -e '
+            using Pkg
+            Pkg.develop(PackageSpec(path=pwd()))
+            Pkg.instantiate()'
+      #- run: |
           julia --project=docs -e '
             using Documenter: DocMeta, doctest
             using GraknClient
