--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,16 +54,16 @@ jobs:
         with:
           version: '1'
       #- run: |
-          julia --project=docs -e '
-            using Pkg
-            Pkg.develop(PackageSpec(path=pwd()))
-            Pkg.instantiate()'
+      #    julia --project=docs -e '
+      #      using Pkg
+      #      Pkg.develop(PackageSpec(path=pwd()))
+      #      Pkg.instantiate()'
       #- run: |
-          julia --project=docs -e '
-            using Documenter: DocMeta, doctest
-            using GraknClient
-            DocMeta.setdocmeta!(GraknClient, :DocTestSetup, :(using GraknClient); recursive=true)
-            doctest(GraknClient)'
+      #    julia --project=docs -e '
+      #      using Documenter: DocMeta, doctest
+      #      using GraknClient
+      #      DocMeta.setdocmeta!(GraknClient, :DocTestSetup, :(using GraknClient); recursive=true)
+      #      doctest(GraknClient)'
       - run: julia --project=docs docs/make.jl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
