--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
             ${{ runner.os }}-test-
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
-      #- uses: julia-actions/julia-runtest@v1
+      - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
         with:
@@ -58,12 +58,12 @@ jobs:
             using Pkg
             Pkg.develop(PackageSpec(path=pwd()))
             Pkg.instantiate()'
-      #- run: |
-      #    julia --project=docs -e '
-      #      using Documenter: DocMeta, doctest
-      #      using GraknClient
-      #      DocMeta.setdocmeta!(GraknClient, :DocTestSetup, :(using GraknClient); recursive=true)
-      #      doctest(GraknClient)'
+      - run: |
+          julia --project=docs -e '
+            using Documenter: DocMeta, doctest
+            using GraknClient
+            DocMeta.setdocmeta!(GraknClient, :DocTestSetup, :(using GraknClient); recursive=true)
+            doctest(GraknClient)'
       - run: julia --project=docs docs/make.jl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
