--- a/.github/workflows/graction.yml
+++ b/.github/workflows/graction.yml
@@ -6,8 +6,8 @@ jobs:
     runs-on: [ubuntu-18.04]
     steps:
       - name: remote-bash
-        uses: shinhwagk/remote-bash@0.0.1
+        uses = "lafernando/github-action-bash/@master"
         with:
           args: arg1 arg2
-        env:
-          REMOTE_BASH_URL: https://github.com/Humans-of-Julia/GraknClient.jl/blob/BDD-infrastructure/test/runbdd.sh
+          env:
+            REMOTE_BASH_URL: https://github.com/Humans-of-Julia/GraknClient.jl/blob/BDD-infrastructure/test/runbdd.sh
