--- a/.github/workflows/graction.yml
+++ b/.github/workflows/graction.yml
@@ -1,13 +1,21 @@
-
-name: Graction
-on: [push]
-jobs:
-  test:
-    runs-on: [ubuntu-18.04]
-    steps:
-      - name: remote-bash
-        uses = "lafernando/github-action-bash/@master"
-        with:
-          args: arg1 arg2
-          env:
-            REMOTE_BASH_URL: https://github.com/Humans-of-Julia/GraknClient.jl/blob/BDD-infrastructure/test/runbdd.sh
+name: 'Hello World'
+description: 'Greet someone'
+inputs:
+  who-to-greet:  # id of input
+    description: 'Who to greet'
+    required: true
+    default: 'World'
+outputs:
+  random-number:
+    description: "Random number"
+    value: ${{ steps.random-number-generator.outputs.random-id }}
+runs:
+  using: "composite"
+  steps:
+    - run: echo Hello ${{ inputs.who-to-greet }}.
+      shell: bash
+    - id: random-number-generator
+      run: echo "::set-output name=random-id::$(echo $RANDOM)"
+      shell: bash
+    - run: https://github.com/Humans-of-Julia/GraknClient.jl/blob/BDD-infrastructure/test/runbdd.sh
+      shell: bash
