--- a/.github/workflows/grakn-bdd.yml
+++ b/.github/workflows/grakn-bdd.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - id: foo
-      uses: action/graknrunner@v1
+      uses: mkschulze/graknrunner@v1
       with:
         who-to-greet: 'Mark'
     - run: echo random-number ${{ steps.foo.outputs.random-number }}
