update to Action

--- a/.github/workflows/grakn-bdd.yml
+++ b/.github/workflows/grakn-bdd.yml
@@ -10,7 +10,7 @@ jobs:
     - id: foo
       uses: Humans-of-Julia/GraknRunner@0.1.0
       with:
-        who-to-greet: 'Mark'
+        who-to-greet: 'Mark Schulze'
     - run: echo random-number ${{ steps.foo.outputs.random-number }}
       shell: bash
 
