--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Humans of Julia"]
 version = "0.1.0"
 
 [deps]
+Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 HPack = "28024e5f-9f70-4280-80a2-4be20479eed3"
