added more precompiled methods to shorten the first startup

--- a/Project.toml
+++ b/Project.toml
@@ -9,18 +9,19 @@ DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Pretend = "8ad1c615-040c-41b0-a18f-ae9e9fd09b5b"
 ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
+SnoopCompile = "aa65fe97-06da-5843-b5b1-d5d13cad87d2"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 gRPCClient = "aaca4a50-36af-4a1d-b878-4c443f2061ad"
 
 [compat]
-julia = "1.6"
-ProtoBuf = "0.11.1"
 DataStructures = "0.18.10"
 Pretend = "1.0.0"
+ProtoBuf = "0.11.1"
 TimeZones = "1.5.6"
 gRPCClient = "0.1.2"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
