--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ gRPCClient = "aaca4a50-36af-4a1d-b878-4c443f2061ad"
 
 [compat]
 DataStructures = "0.18.10"
+Behavior = "0.3.1"
 Pretend = "1.0.0"
 ProtoBuf = "0.11.1"
 TimeZones = "1.5.6"
