--- a/.github/workflows/BDD-runner.yml
+++ b/.github/workflows/BDD-runner.yml
@@ -9,6 +9,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install TypeDB Server
       run: |
+        sudo apt-get update
         sudo apt install software-properties-common apt-transport-https
         sudo apt-key adv --keyserver keyserver.ubuntu.com --recv 8F3DA4B5E9AEF44C
         sudo add-apt-repository 'deb [ arch=all ] https://repo.vaticle.com/repository/apt/ trusty main'
@@ -16,9 +17,9 @@ jobs:
         sudo apt install typedb-all
     - name: Run TypeDB Server
       run: |
-        typedb server
+
     - id: foo
-      uses: Humans-of-Julia/TypeDBRunner@0.1.2
+      uses: Humans-of-Julia/TypeDBRunner@0.1.3
       with:
         who-to-greet: 'Mark Schulzee'
     - run: echo random-number ${{ steps.foo.outputs.random-number }}
