--- a/.github/workflows/BDD-runner.yml
+++ b/.github/workflows/BDD-runner.yml
@@ -15,9 +15,23 @@ jobs:
         sudo add-apt-repository 'deb [ arch=all ] https://repo.vaticle.com/repository/apt/ trusty main'
         sudo apt update
         sudo apt install typedb-all
+    - name: Install Julia
+      run: |
+        sudo apt install snapd
+        sudo snap install julia --classic
+        mount snap "julia"
+        sudo snap install julia --classic
+        julia
     - name: Run TypeDB Server
       run: |
         typedb server &
+    - name: Pulling our feature files
+      run: |
+        ls -a
+        mkdir features
+        cd features 
+        git clone https://github.com/Humans-of-Julia/TypeDBClient.jl.git
+        ls
     - id: foo
       uses: Humans-of-Julia/TypeDBRunner@0.1.3
       with:
