--- a/.github/workflows/BDD-runner.yml
+++ b/.github/workflows/BDD-runner.yml
@@ -17,13 +17,14 @@ jobs:
         sudo apt install typedb-all
     - name: Install Julia
       run: |
+        mkdir Downloads
         cd ~/Downloads
         wget https://julialang-s3.julialang.org/bin/linux/x64/1.6/julia-1.6.2-linux-x86_64.tar.gz
         tar -xvzf julia-1.6.2-linux-x86_64.tar.gz
         sudo cp -r julia-1.6.2 /opt/
         sudo ln -s /opt/julia-1.6.2/bin/julia /usr/local/bin/julia
         julia
-        
+
     - name: Run TypeDB Server
       run: |
         typedb server &
