--- a/.github/workflows/BDD-runner.yml
+++ b/.github/workflows/BDD-runner.yml
@@ -7,17 +7,10 @@ jobs:
     name: A job to pull feature files, install TypeDB, and execute the tests
     steps:
     - uses: actions/checkout@v2
-    - name: Install TypeDB Server
-      run: |
-        sudo apt-get update
-        sudo apt install software-properties-common apt-transport-https
-        sudo apt-key adv --keyserver keyserver.ubuntu.com --recv 8F3DA4B5E9AEF44C
-        sudo add-apt-repository 'deb [ arch=all ] https://repo.vaticle.com/repository/apt/ trusty main'
-        sudo apt update
-        sudo apt install typedb-all
+
     - name: Install Julia
       run: |
-        mkdir Downloads
+        mkdir ~/Downloads
         cd ~/Downloads
         wget https://julialang-s3.julialang.org/bin/linux/x64/1.6/julia-1.6.2-linux-x86_64.tar.gz
         tar -xvzf julia-1.6.2-linux-x86_64.tar.gz
