--- a/.github/workflows/BDD-runner.yml
+++ b/.github/workflows/BDD-runner.yml
@@ -6,40 +6,32 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to pull feature files, install TypeDB, and execute the tests
     steps:
-    - uses: actions/checkout@v2
-    - name: Install Julia
-      run: |
-        mkdir ~/Downloads
-        cd ~/Downloads
-        wget https://julialang-s3.julialang.org/bin/linux/x64/1.6/julia-1.6.2-linux-x86_64.tar.gz
-        tar -xvzf julia-1.6.2-linux-x86_64.tar.gz
-        sudo cp -r julia-1.6.2 /opt/
-        sudo ln -s /opt/julia-1.6.2/bin/julia /usr/local/bin/julia
-    - name: Run TypeDB Server
-      run: |
-        typedb server &
-    - name: Pulling our feature files
-      run: |
-        mkdir ~/features
-        cd ~/features 
-        git clone https://github.com/Humans-of-Julia/TypeDBClient.jl.git
-        ls
-        cd TypeDBClient.jl
-        ls  
-    - name: Install Julia and run scripts
-    - uses: julia-actions/setup-julia@latest
-      with:
-        version: '1.6.2'
-        arch: 'x64'
-        show-versioninfo: 'true'
-        outputs: ''
-        julia-version: ''
-        julia-bindir: ''
-      run: |
-        julia -e 'println("Hello, World!")'
-        julia -e 'using Pkg; Pkg.clone("git@github.com:Humans-of-Julia/TypeDBClient.jl.git")'
-        julia -e 'using Pkg; Pkg.add("Behavior")'
-      shell: bash
-    - name: Show a random number
-    - run: echo random-number ${{ steps.foo.outputs.random-number }}
-      shell: bash
+      - uses: actions/checkout@v2
+      - name: Run TypeDB Server
+        run: |
+          typedb server &
+      - name: Pulling our feature files
+        run: |
+          mkdir ~/features
+          cd ~/features 
+          git clone https://github.com/Humans-of-Julia/TypeDBClient.jl.git
+          ls
+          cd TypeDBClient.jl
+          ls  
+      - name: Install Julia and run scripts
+        uses: julia-actions/setup-julia@latest
+        with:
+          version: '1.6.2'
+          arch: 'x64'
+          show-versioninfo: 'true'
+          outputs: ''
+          julia-version: ''
+          julia-bindir: ''
+      - run: |
+          julia -e 'println("Hello, World!")'
+          julia -e 'using Pkg; Pkg.clone("git@github.com:Humans-of-Julia/TypeDBClient.jl.git")'
+          julia -e 'using Pkg; Pkg.add("Behavior")'
+        shell: bash
+      - name: Show a random number
+      - run: echo random-number ${{ steps.foo.outputs.random-number }}
+        shell: bash
