--- a/.github/workflows/BDD-runner.yml
+++ b/.github/workflows/BDD-runner.yml
@@ -18,6 +18,21 @@ jobs:
           ls
           cd TypeDBClient.jl
           ls  
+      - uses: julia-actions/setup-julia@latest
+        with:
+          version: '1.6.2'
+          arch: 'x64'
+          show-versioninfo: 'true'
+          outputs: ''
+          julia-version: ''
+          julia-bindir: ''
+
+      - name: Install Julia and run scripts
+        run: |
+          julia -e 'println("Hello, World!")'
+          julia -e 'using Pkg; Pkg.clone("git@github.com:Humans-of-Julia/TypeDBClient.jl.git")'
+          julia -e 'using Pkg; Pkg.add("Behavior")'
+        shell: bash
       - name: Show a random number
         run: echo random-number ${{ steps.foo.outputs.random-number }}
         shell: bash
