--- a/.github/workflows/BDD-runner.yml
+++ b/.github/workflows/BDD-runner.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Julia and run scripts
         run: |
           julia -e 'println("Hello, World!")'
-          julia -e 'using Pkg; Pkg.clone("git@github.com:Humans-of-Julia/TypeDBClient.jl.git")'
+          julia -e 'using Pkg; Pkg.add("git@github.com:Humans-of-Julia/TypeDBClient.jl.git")'
           julia -e 'using Pkg; Pkg.add("Behavior")'
         shell: bash
       - name: Show a random number
