--- a/.github/workflows/BDD-runner.yml
+++ b/.github/workflows/BDD-runner.yml
@@ -31,8 +31,7 @@ jobs:
         run: |
           julia -e 'println("Hello, World!")'
           julia -e 'using Pkg; Pkg.add(url="https://github.com/Humans-of-Julia/TypeDBClient.jl.git")'
-          julia -e 'using Pkg; Pkg.add("Behavior")'
-          julia -e cd '~/features/TypeDBClient.jl/test'
+          julia -e 'cd (raw'~/features/TypeDBClient.jl/test')
           julia -e 'runner.jl'
         shell: bash
       - name: Show a random number
