--- a/.github/workflows/BDD-runner.yml
+++ b/.github/workflows/BDD-runner.yml
@@ -9,9 +9,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           path: main
-      - name: Run TypeDB Server
-        run: |
-          typedb server &
+
       - name: Pulling our feature files
         run: |
           mkdir ~/features
@@ -33,8 +31,7 @@ jobs:
         run: |
           julia -e 'println("Hello, World!")'
           julia -e 'using Pkg; Pkg.add(url="https://github.com/Humans-of-Julia/TypeDBClient.jl.git")'
-          julia -e 'cd(raw'~/features/TypeDBClient.jl/test')'
-          julia -e 'runner.jl'
+          julia -e 'isfile("runner.jl")'
         shell: bash
       - name: Show a random number
         run: echo random-number ${{ steps.foo.outputs.random-number }}
