--- a/.github/workflows/BDD-runner.yml
+++ b/.github/workflows/BDD-runner.yml
@@ -31,7 +31,10 @@ jobs:
         run: |
           julia -e 'println("Hello, World!")'
           julia -e 'using Pkg; Pkg.add(url="https://github.com/Humans-of-Julia/TypeDBClient.jl.git")'
-          julia -e 'isfile("runner.jl")'
+          julia -e 'pwd()'
+          julia -e 'cd("/home/runner/work/TypeDBClient.jl/TypeDBClient.jl")'
+          julia -e 'pwd()'
+          julia -e 'readdir()'
         shell: bash
       - name: Show a random number
         run: echo random-number ${{ steps.foo.outputs.random-number }}
