--- a/.github/workflows/BDD-runner.yml
+++ b/.github/workflows/BDD-runner.yml
@@ -30,10 +30,10 @@ jobs:
         shell: bash          
       - name: Start BDD Runner
         run: |
-          julia -e pwd()
-          julia -e cd("/home/runner/work/TypeDBClient.jl/TypeDBClient.jl")
-          julia -e pwd()
-          julia -e readdir()
+          julia -e pwd
+          julia -e 'cd("/home/runner/work/TypeDBClient.jl/TypeDBClient.jl")'
+          julia -e 'pwd()'
+          julia -e 'readdir()'
         shell: bash
       - name: Show a random number
         run: echo random-number ${{ steps.foo.outputs.random-number }}
