--- a/.github/workflows/BDD-runner.yml
+++ b/.github/workflows/BDD-runner.yml
@@ -34,7 +34,7 @@ jobs:
           julia -e 'cd("/home/runner/work/TypeDBClient.jl/TypeDBClient.jl")'
           julia -e 'println(pwd())'
           julia -e 'println(readdir())'
-          julia -e 'cd("/home/runner/work/TypeDBClient.jl/TypeDBClient.jl/main")'
+          julia -e 'cd("/home/runner/work/TypeDBClient.jl/TypeDBClient.jl/test")'
           julia -e 'println(pwd())'
           julia -e 'println(readdir())'
           julia -e 'println(isfile(homedir(main/test/runner.jl)))'
