--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 gRPCClient = "aaca4a50-36af-4a1d-b878-4c443f2061ad"
 
 [compat]
-Behavior = "0.3.1"
+Behavior = "0.3.1, 0.4"
 DataStructures = "0.18.10"
 Documenter = "0.27"
 Pretend = "1.0.0"
